--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.2
 autopep8==1.5.7
-backports.entry-points-selectable==1.1.0
+backports.entry-points-selectable==1.1.0;python_version<"3.9"
 backports.zoneinfo==0.2.1;python_version<"3.9"
 botocore==1.12.16
 Cython==0.29.30
